--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div class="Middle">
     <div class="profile">
-      <img class="PP" src="C:\Users\SibghatUllah\Desktop\Web Development Projects\Pharmacist\Images\1.png" alt="Maliha's-img">
+      <img class="PP" src="Images\1.png" alt="Maliha's-img">
       <h2>Hi!!!.</h2>
       <p>"I'm a <strong>Pharmacist</strong> by profession, I've done Pharm D from <a href="https://uol.edu.pk/">The University of Lahore</a> having a cgpa 3.63/4. Currently I'm a product Manager <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjf44KU3az4AhVNodUKHeCJCEoYABAAGgJ3cw&ae=2&ohost=www.google.com&cid=CAASJeRoTeeW7AxuO8AJnXWHbPIrw4JBHklDyVRHHdYY03YB1pz-6f8&sig=AOD64_1_z7up_ynKTgN_4C98-h8I9PcWlw&q&adurl&ved=2ahUKEwig9vuT3az4AhVC_aQKHahVDEIQ0Qx6BAgCEAE">Jenpharm.</a>.
         I love travelling, Music & Starbucks ofcourse"
